<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_meat">Carne</string>
    <string name="menu_fish">Peixe</string>
    <string name="menu_milk">Laticínios</string>
    <string name="menu_grocery">Mercearia</string>
    <string name="menu_fruit">Fruta/Legumes</string>
    <string name="menu_rice">Arroz/Massa</string>
    <string name="menu_water">Bebidas</string>
    <string name="menu_bread">Pão/Bolachas</string>
    <string name="menu_gastr">Gastronomia</string>
    <string name="menu_dessert">Sobremesa</string>
    <string name="menu_spices">Temperos</string>
    <string name="list_products">Lista de compras</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>
    <string name="compras">Compras</string>
    <string name="outbutton">Sair</string>

</resources>