<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meat"
            android:icon="@drawable/ic_menu_send"
            android:onClick="click_meat"
            android:title="@string/menu_meat" />
        <item
            android:id="@+id/nav_fruit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_fruit" />
        <item
            android:id="@+id/nav_milk"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_milk" />
        <item
            android:id="@+id/nav_grocery"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_grocery" />
        <item
            android:id="@+id/nav_rice"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_rice" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_water" />
        <item
            android:id="@+id/nav_bread"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_bread" />
        <item
            android:id="@+id/nav_gastr"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_gastr" />
        <item
            android:id="@+id/nav_dessert"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_dessert" />
        <item
            android:id="@+id/nav_spices"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_spices" />
    </group>
</menu>